--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 joblib==1.3.2
-numpy==1.23.5
+numpy=>1.27
 Pillow==9.3.0
-scikit-image==0.22.0
 scikit-learn==1.3.1
 streamlit==1.28.2
 torch==2.1.0
