--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-joblib==1.3.2
-numpy=>1.27
-Pillow==9.3.0
-scikit-learn==1.3.1
+joblib==1.4.2
+numpy==1.24.4
+Pillow==10.0.0
+scikit-image==0.21.0
+scikit-learn==1.3.0
 streamlit==1.28.2
 torch==2.1.0
 torchaudio==2.1.0
